<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="#FFEFD5"
    tools:context="com.qhp334.drop.activity.RegisterActivity">

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/telephone"
        style="@style/Register"
        android:hint="@string/hintTelephone"
        android:inputType="phone"
        android:maxLength="11"/>
    <EditText
        android:id="@+id/uName"
        style="@style/Register"
        android:hint="@string/hintUName"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/password"
        style="@style/Register"
        android:hint="@string/hintPassword"
        android:maxLength="18"
        android:inputType="textPassword"
        android:digits="@string/account"/>
    <EditText
        android:id="@+id/password2"
        android:maxLength="18"
        style="@style/Register"
        android:hint="@string/hintPassword2"
        android:inputType="textPassword"
        android:digits="@string/account"/>
    <Button
        android:id="@+id/register"
        android:text="@string/Register"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/cancel_register"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
