<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.qhp334.drop.fragment.MainFragment">

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RadioGroup
        android:background="#20B2AA"
        android:id="@+id/radioGroup"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:drawableTop="@drawable/select_home"
            style="@style/CheckStyle"
            android:id="@+id/radio_friend"
            android:text="@string/friend"/>
        <RadioButton
            android:drawableTop="@drawable/select_mv"
            style="@style/CheckStyle"
            android:id="@+id/radio_mv"
            android:text="@string/m_v"/>
        <RadioButton
            android:drawableTop="@drawable/select_live"
            style="@style/CheckStyle"
            android:id="@+id/radio_live"
            android:text="@string/live"/>



        <RadioButton
            android:drawableTop="@drawable/select_my"
            style="@style/CheckStyle"
            android:id="@+id/radio_my"
            android:text="@string/my"/>

    </RadioGroup>



</RelativeLayout>
